# kaggle-child-mind-institute-detect-sleep-states

./: pyproject.toml  sleep_states.py
.streamlit/: config.toml
pages/: load.py  visualize.py
