[tool.poetry]
name = "child-mind-institute-detect-sleep-states"
version = "0.1.0"
description = "Work on the kaggle competition from the Child Mind Institute to detect sleep states"
authors = ["Denis Roussel <droussel@centreon.com>"]
readme = "README.md"
packages = [{include = "child_mind_institute_detect_sleep_states"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.26.0"
scikit-learn = "^1.3.0"
polars = "^0.19.2"
platformdirs = "^3.10.0"
kaggle = "^1.5.16"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
